# Baar-Core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  RESEARCH.md  pyproject.toml
.cursor/rules/: release-versioning-policy.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump-version.yml  ci.yml  pr-approved.yml  publish.yml  release.yml
baar/: __init__.py  __main__.py  router.py  telemetry_cli.py
baar/core/: __init__.py  budget.py  exceptions.py  models.py  policy.py  router.py  stores.py
baar/integrations/: __init__.py  crewai.py  hermes.py  langchain.py  langgraph.py  tools.py  vercel.py
benchmarks/: data_loader.py  evaluators.py  standard_eval.py  stress_test.py
examples/: agent_loop.py  basic_usage.py  claude_tool_guard.py  crewai_integration.py  fastapi_per_user_budget.py  hermes_integration.py  langchain_guardrail.py  langgraph_middleware.py  mcp_server.py  multi_tenant.py  openai_tool_guard.py  streaming.py  tool_guard.py  vercel_server.py
tests/: conftest.py  test_alerts.py  test_baar_router_coverage.py  test_budget.py  test_budget_windows.py  test_coverage_gaps.py  test_crewai_integration.py  test_hermes_integration.py  test_langchain_integration.py  test_langgraph_middleware.py  test_mcp_server.py  test_models.py  test_policy.py  test_resilience.py  test_router.py  test_router_integration.py  test_standard_eval_calibration.py  test_stores.py  test_telemetry_cli.py  test_tools_guard.py  test_vercel_integration.py
