[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baar-core"
version = "0.5.0"
description = "Budget-Aware Agentic Routing — route LLM calls intelligently between cheap and powerful models with a hard budget cap."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "agents", "routing", "budget", "cost", "openai", "langchain", "langgraph", "agent budget"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "litellm>=1.30.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
vercel = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "datasets>=2.15.0",
    "huggingface_hub>=0.19.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
]

[project.scripts]
baar-bench = "benchmarks.standard_eval:main"
baar-stress = "benchmarks.stress_test:main"
baar-telemetry = "baar.telemetry_cli:main"

[project.urls]
Homepage = "https://baar.robatdasorvi.com"
Documentation = "https://baar.robatdasorvi.com"
Repository = "https://github.com/orvi2014/Baar-Core"
Issues = "https://github.com/orvi2014/Baar-Core/issues"
Changelog = "https://github.com/orvi2014/Baar-Core/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["baar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::RuntimeWarning:baar.core.router",
]

[tool.coverage.run]
source = ["baar"]
omit = ["tests/*", "benchmarks/*", "examples/*"]